[gd_scene load_steps=9 format=2]

[ext_resource path="res://ASSETS/force.png" type="Texture" id=1]
[ext_resource path="res://MAIN/wheel.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_no_depth_test = true
albedo_color = Color( 0.478431, 1, 0.478431, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
flags_no_depth_test = true
albedo_color = Color( 1, 0.478431, 0.478431, 1 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true
flags_no_depth_test = true

[sub_resource type="CubeMesh" id=7]
material = SubResource( 10 )
size = Vector3( 0.1, 0.1, 0.1 )

[node name="axle" type="RayCast"]
enabled = true
cast_to = Vector3( 0, 0, 0 )
script = ExtResource( 2 )
WL_size = 0.579

[node name="c_v" type="Position3D" parent="."]
visible = false

[node name="patch_pos_y" type="MeshInstance" parent="c_v"]
mesh = SubResource( 5 )

[node name="patch_pos_x" type="MeshInstance" parent="c_v"]
mesh = SubResource( 9 )

[node name="lateral" type="Sprite3D" parent="c_v"]
transform = Transform( -4.37114e-09, 1, -4.37114e-08, 0, -4.37114e-08, -1, -0.1, -4.37114e-08, 1.91069e-15, 0, 0, 0 )
offset = Vector2( 0, -64 )
transparent = false
alpha_cut = 1
texture = ExtResource( 1 )

[node name="longitudinal" type="Sprite3D" parent="c_v"]
transform = Transform( 0.1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
offset = Vector2( 0, -64 )
transparent = false
alpha_cut = 1
texture = ExtResource( 1 )

[node name="suspforce" type="Sprite3D" parent="c_v"]
transform = Transform( 0.1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0 )
offset = Vector2( 0, -64 )
modulate = Color( 1, 0.752941, 0.258824, 1 )
transparent = false
alpha_cut = 1
texture = ExtResource( 1 )

[node name="imp_point" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 7 )
skeleton = NodePath("../c_v")

[node name="hub" type="Position3D" parent="."]

[node name="spin" type="Position3D" parent="hub"]

[node name="fixed" type="Position3D" parent="hub"]
